// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Donut overview 1 snapshot 1`] = `
<DocumentFragment>
  <svg
    aria-valuemax="0"
    aria-valuemin="1"
    aria-valuenow="1"
    class="css-1tx9y9r"
    fill="none"
    height="84"
    role="img"
    stroke="currentcolor"
    stroke-width="3"
    viewBox="0 0 32 32"
    width="84"
  >
    <title>
      Cyril Cummerata
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="13"
    />
    <circle
      cx="16"
      cy="16"
      r="13"
      stroke-dasharray="81.68140899333463"
      stroke-dashoffset="81.68140899333463"
      transform="rotate(-90 16 16)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Donut overview 2 snapshot 1`] = `
<DocumentFragment>
  <svg
    aria-valuemax="1"
    aria-valuemin="0"
    aria-valuenow="0"
    class="css-1tx9y9r"
    fill="none"
    height="193"
    role="img"
    stroke="currentcolor"
    stroke-width="4"
    viewBox="0 0 32 32"
    width="193"
  >
    <title>
      Cleo Lindgren
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="12"
    />
    <circle
      cx="16"
      cy="16"
      r="12"
      stroke-dasharray="75.39822368615503"
      stroke-dashoffset="75.39822368615503"
      transform="rotate(-90 16 16)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Donut overview 3 snapshot 1`] = `
<DocumentFragment>
  <svg
    aria-valuemax="0"
    aria-valuemin="1"
    aria-valuenow="0"
    class="css-1tx9y9r"
    fill="none"
    height="256"
    role="img"
    stroke="currentcolor"
    stroke-width="3"
    viewBox="0 0 32 32"
    width="256"
  >
    <title>
      Lela McClure
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="13"
    />
    <circle
      cx="16"
      cy="16"
      r="13"
      stroke-dasharray="81.68140899333463"
      stroke-dashoffset="0"
      transform="rotate(-90 16 16)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Donut overview 4 snapshot 1`] = `
<DocumentFragment>
  <svg
    aria-valuemax="0"
    aria-valuemin="1"
    aria-valuenow="1"
    class="css-1tx9y9r"
    fill="none"
    height="69"
    role="img"
    stroke="currentcolor"
    stroke-width="2"
    viewBox="0 0 32 32"
    width="69"
  >
    <title>
      Scot Kuhic
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="14"
    />
    <circle
      cx="16"
      cy="16"
      r="14"
      stroke-dasharray="87.96459430051421"
      stroke-dashoffset="87.96459430051421"
      transform="rotate(-90 16 16)"
    />
  </svg>
</DocumentFragment>
`;

exports[`Donut overview 5 snapshot 1`] = `
<DocumentFragment>
  <svg
    aria-valuemax="2"
    aria-valuemin="1"
    aria-valuenow="0"
    class="css-1tx9y9r"
    fill="none"
    height="139"
    role="img"
    stroke="currentcolor"
    stroke-width="4"
    viewBox="0 0 32 32"
    width="139"
  >
    <title>
      Amara Kuvalis
    </title>
    <circle
      cx="16"
      cy="16"
      opacity="0.125"
      r="12"
    />
    <circle
      cx="16"
      cy="16"
      r="12"
      stroke-dasharray="75.39822368615503"
      stroke-dashoffset="150.79644737231007"
      transform="rotate(-90 16 16)"
    />
  </svg>
</DocumentFragment>
`;
